--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -110,6 +110,11 @@ li img {
 li:hover {
 	color: #B1663C;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
 #introduction {
 	display: flex;
 	align-items: center;
@@ -241,3 +246,19 @@ footer nav ul {
 	margin: 2em
 }
 
+/*** Login Page ***/
+.loginTitle {
+	text-align: center;
+}
+
+.loginForm {
+	margin-bottom: 355px
+}
+
+.loginForm > #contact{
+	margin-top: 0px;
+}
+
+.forgetPasswordLink {
+	text-decoration-line: underline;
+}
