--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -47,6 +47,10 @@ table {
 	border-spacing: 0;
 }
 /** end reset css**/
+* {
+	box-sizing: border-box;
+}
+
 body {
 	max-width: 1440px;
 	font-family: 'Work Sans' ;
@@ -207,7 +211,7 @@ a {
 	margin-top: 19px;
 	display: flex;
 	flex-direction: column;
-	width: 70%;
+	width: 84%;
 	padding-left: 85px
 }
 
@@ -239,6 +243,7 @@ input[type="submit"]{
 footer {
 	background-color: #FFFFFF;
 	border: 1px solid #FFFFFF;
+	margin-top: 12px;
 }
 footer nav ul {
 	display: flex;
@@ -247,18 +252,57 @@ footer nav ul {
 }
 
 /*** Login Page ***/
-.loginTitle {
+.login_title {
 	text-align: center;
 }
 
-.loginForm {
+.login_form {
 	margin-bottom: 355px
 }
 
-.loginForm > #contact{
+.login_form > #contact {
 	margin-top: 0px;
 }
 
-.forgetPasswordLink {
+.forget_passwordLink {
 	text-decoration-line: underline;
+}
+
+/*** Style de la page Admin ***/
+.banner {
+	background-color: black;
+	height: 59px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.banner > i, .bannerPrg{
+	color: #FFFFFF
+}
+
+.bannerPrg {
+	margin-left: 11.42px;
+}
+
+
+/*** Style de la modale ***/
+.modal {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-wrapper {
+	overflow: auto;
+	width: 630px;
+	max-width: calc(100vw - 20px);
+	max-height: calc(100vh - 20px);
+	padding: 20px;
+	background-color: #FFF;
 }
