--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -324,7 +324,7 @@ footer nav ul {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: rgba(0, 0, 0, 0.3);
 }
 
 .modal-wrapper {
@@ -362,6 +362,7 @@ footer nav ul {
 }
 
 .projectModal {
+	position: relative;
 	width: 78px;
 }
 .projectModal img {
@@ -370,6 +371,17 @@ footer nav ul {
 	object-fit: cover;
 }
 
+.fa-trash-can {
+	position: absolute;
+	font-size: 9px;
+	top: 5px;
+	right: 4.8px;
+	cursor: pointer;
+	color: white;
+	background-color: black;
+	padding: 4px 4.5px;
+	border-radius: 2px;
+}
 .button-container {
 	text-align: center;
 	padding: 38px 38px 23px 38px;
