--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -432,15 +432,16 @@ footer nav ul {
 	flex-direction: column;
 	align-items: center;
 	gap: 7px;
-	padding-top: 19px;
-	padding-bottom: 19px;
 	margin-bottom: 30px;
 	border-radius: 3px;
+	width: 100%;
+	height: 169px;
 }
 
 .addPicture .fa-image {
 	font-size: 60px;
 	color: rgba(185, 197, 204, 1);
+	padding-top: 19px;
 }
 
 #addPictureForm input, .select-container {
@@ -464,22 +465,36 @@ footer nav ul {
 .addPicture p {
 	color: rgba(68, 68, 68, 1);
 	font-size: 10px;
+	padding-bottom: 19px;
+	padding-top: 4px;
+}
+
+.addPicture img {
+	max-height: 169px;
+	max-width: 129px;
+	object-fit: cover;
 }
 
 .send-button-container {
 	margin: 28px 0 0;
 }
 
-#sendProjectButton {
+#sendProjectButton.disabled{
 	min-width: 237px;
 	background-color: rgba(167, 167, 167, 1);
+	border: none;
+}
+
+#sendProjectButton.enabled{
+	min-width: 237px;
+	background-color: rgba(29, 97, 84, 1);
 	border: none;
 }
 
 .select-container {
     position: relative;
     display: flex;
-	justify-content: flex-end;
+	justify-content: flex-start;
 }
 
 .select-container select {
@@ -490,6 +505,7 @@ footer nav ul {
 	padding: 10px;
 	padding-right: 30px;
 	background-color: transparent;
+	width: 100%;
 }
 
 .select-container .chevron-container {
@@ -504,8 +520,4 @@ footer nav ul {
 .chevron-container i {
 	font-size: 12px;
 	color: rgba(108, 108, 108, 1);
-}
-
-button, a, select, input,  textarea, .fa-xmark,  .fa-trash-can, .fa-arrow-left{
-	
 }
